--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -117,7 +117,7 @@ h1, h2, h3 {
 
 /* Ekstra klimagrøn */
 .box-green4 {
-  background-color: #A0C08C;
+  background-color: #a0c08c;
   color: #262626;
 }
 
@@ -129,16 +129,16 @@ h1, h2, h3 {
   box-shadow: 0 8px 10px 0 rgb(60 60 60 / 30%), 0 2px 6px 0 rgb(64 64 64 / 19%);
 }
 
-.visual-container a, .hero a, .visual-teaser a {
+:is(.visual-container, .hero, .visual-teaser) a {
   color: inherit;
   text-decoration: none;
 }
 
-.visual-container a:hover .with-arrow, .hero a:hover .with-arrow, .visual-teaser a:hover .with-arrow {
+:is(.visual-container, .hero, .visual-teaser) a:hover .with-arrow {
   text-decoration: underline;
 }
 
-.visual-container a:focus .with-arrow, .hero a:focus .with-arrow, .visual-teaser a:focus .with-arrow {
+:is(.visual-container, .hero, .visual-teaser) a:focus .with-arrow {
   outline: 1px dotted #000;
   outline-offset: -1px;
 }
@@ -895,7 +895,7 @@ video {
     object-fit: contain;
   }
 
-  .video-sitewidth [itemprop="video"], .hero-video-sitewidth [itemprop="video"] {
+  :is(.video-sitewidth, .hero-video-sitewidth) [itemprop="video"] {
     width: 100vw;
     margin-left: calc(-50vw + 50%);
     margin-right: calc(-50vw + 50%);
@@ -1057,7 +1057,7 @@ video {
     display: block;
   }
 
-  .video-sitewidth .visual-teaser .cat, .hero-video-sitewidth .visual-teaser .cat {
+  :is(.video-sitewidth, .hero-video-sitewidth) .visual-teaser .cat {
     margin-right: 3px;
     letter-spacing: 1px;
     opacity: 0.7;
@@ -1065,11 +1065,12 @@ video {
     font-size: 20px;
   }
 
-  .video-sitewidth .visual-teaser .cat, .video-sitewidth .visual-teaser p, .hero-video-sitewidth .visual-teaser .cat, .hero-video-sitewidth .visual-teaser p {
+  :is(.video-sitewidth, .hero-video-sitewidth) .visual-teaser .cat,
+  :is(.video-sitewidth, .hero-video-sitewidth) .visual-teaser p {
     display: inline;
   }
 
-  .video-sitewidth .visual-caption, .hero-video-sitewidth .visual-caption {
+  :is(.video-sitewidth, .hero-video-sitewidth) .visual-caption {
     position: relative;
     width: auto;
     right: auto;
@@ -1081,7 +1082,7 @@ video {
     padding-right: 0;
   }
 
-  .video-sitewidth .visual-teaser, .hero-video-sitewidth .visual-teaser {
+  :is(.video-sitewidth, .hero-video-sitewidth) .visual-teaser {
     width: 75%;
     font-size: 20px;
   }
@@ -1637,16 +1638,16 @@ html:lang(en) .til-gavn>.container::before {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 525.94 525.93'%3E%3Cdefs%3E%3C/defs%3E%3Cpath fill='%23c73028' d='M109.61 332.09c3.83 3.23 11.19 5.89 15.6 5.89 20.33 0 31.51-21.2 31.51-48.29 0-28-14.42-47.11-37.38-47.11-6.78 0-12.38 2.35-15.91 5.89-2.35 2.65-3.24 7.65-3.24 20v44.75c0 9.13 3.24 13.55 9.42 18.85' transform='translate(-10.3 -4.18)'/%3E%3Cpath fill='%23c73028' d='M535.06 242.58h-24.74c-5.3 0-5.59.59-5.59 10v45.34c0 18.55 2.65 35 21.49 35 .65 0 1.16-.11 1.75-.16a263.24 263.24 0 008.27-65.67c0-8.28-.43-16.47-1.18-24.56M473.81 313v-59.82c0-10.3-.59-10.6-5.31-10.6h-10.29c-2.95-1.47-3.54-6.18-.88-7.94a95.64 95.64 0 0023.26-12.38c5.59-4.12 12.07-10.3 16.18-18.25 2.66-1.77 6.77-.88 8.25 1.47v17.67c0 4.71 0 5.59 5.59 5.59h22.81c-18.59-127-128-224.56-260.15-224.56A262 262 0 0093.41 75.43a13.8 13.8 0 01-18 18.64 262.74 262.74 0 00-21.19 318.55l3.88-.45c10-1.17 11.19-4.71 11.19-26.5V267.31c0-13.25.29-15.89-7.37-20.9l-3.53-2.36c-1.18-1.77-1.18-5.3.29-6.77C70.46 234 88.12 225.79 97 219.91a4.65 4.65 0 014.71 3 80.2 80.2 0 00-1.46 11.48c0 1.76.88 3.53 2.35 3.83 3.83-1.77 21.2-12.66 36.5-12.66 32.11 0 50.65 24.14 50.65 54.46 0 40.93-28.85 69.78-72.14 69.78a83 83 0 01-12.94-1.18c-2.66.6-4.42 2.37-4.42 8.25v28.85c0 21.79 1.17 25 11.48 26.21l10.59 1.18c2.07 2.06 1.78 7.36-.58 8.54-15.31-.59-26.79-.89-37.69-.89-7.17 0-15.3.16-23.79.48a262.56 262.56 0 00213.01 108.87c117.34 0 216.7-76.87 250.54-183a55.92 55.92 0 01-17 2.62c-28 0-33-16.19-33-36.8M104 199.6c-7.72-.42-14.81-.62-22.53-.62-6.88 0-14 .2-21.9.62-1.67-.83-1.88-4.59-.42-6l3.76-.62c7.09-1.26 7.92-3.34 7.92-18.78v-30.71c0-9.39 0-11.89-5.21-15L63.06 127a5.63 5.63 0 01.21-4.81c10.85-3.12 21.28-7.72 27.12-11.26a3.87 3.87 0 012.92 1.67c-.42 6.89-.63 16.9-.63 25.45v36.08c0 15.44.84 17.52 7.93 18.78l3.76.62c1.45 1.46 1.25 5.22-.42 6m69.88 0c-1.68-.83-1.89-4.59-.43-6l2.72-.41c7.09-1 7.92-3.55 7.92-19v-28.33c0-11.06-3.75-19.4-15.85-19.4-7.09 0-12.52 3.34-14.81 6.47-2.5 3.33-2.71 5.21-2.71 13.34v28c0 15.44.83 17.95 7.93 19l3.13.41c1.45 1.46 1.24 5.22-.43 6a377.6 377.6 0 00-22.11-.62c-6.88 0-13.77.2-21.69.62-1.67-.83-1.88-4.59-.41-6l3.75-.62c7.09-1.26 7.92-3.34 7.92-18.78v-30.72c0-9.39 0-11.89-5.21-15l-2.5-1.45a5.56 5.56 0 01.21-4.81A135.44 135.44 0 00148.37 111a2.88 2.88 0 012.71 1.67 95.46 95.46 0 00-.41 9.59c0 1.47.62 1.88 1.87 2.09 10.23-5.42 15.65-10.43 29.84-10.43 9 0 15.85 4.8 18.77 8.76 1.25 1.88 2.5 3.13 3.34 3.13s2.08-.63 4.58-2.08c9.81-6.06 16.9-9.81 26.7-9.81 17.52 0 25.45 11.68 25.45 27.95v32.33c0 15.44.84 17.74 7.92 18.78l4.6.62c1.87 1.46.84 5.22 0 6-9-.42-16.07-.62-23.78-.62-6.89 0-14 .2-21.49.62-1.67-.83-1.88-4.59-.41-6l3.33-.62c7.09-1.26 7.93-3.34 7.93-18.78v-28.41c0-11.06-3.76-19.4-16.9-19.4-6 0-11.47 3.13-14 6.25-2.08 2.5-2.51 5-2.51 10.85v30.66c0 15.44.84 17.95 7.93 19l3.13.41c1.46 1.46 1.25 5.22-.42 6-7.3-.42-14.18-.62-21.9-.62-6.89 0-14 .2-20.85.62m32.46 188.33a13.16 13.16 0 00-7-1.88c-3.65 0-7.64 1.43-7.64 6 0 6.46 13.17 6.51 13.17 16.64 0 5.81-4 12.4-13.33 12.4a27.54 27.54 0 01-10.79-2.22l1.76-5.09a16.3 16.3 0 008.14 2.44c5.88 0 8.36-3.65 8.36-6.87 0-7.85-13.17-6.46-13.17-17.2 0-7 6.42-11 12.77-11a24.13 24.13 0 019.3 1.83zm8.37 32.53h-5.59l8.3-38.62H223zm39.62 0h-7.14l-10.9-32.08h-.11l-6.59 32.08h-5.31l8-38.62h7.3l10.9 32.37h.11l6.86-32.37h5.26zm30.29-4.2a18.42 18.42 0 006.91-1.33l-.72 5.15a24 24 0 01-7.08 1.05c-10.29 0-18.15-5.42-18.15-17.65 0-9.46 6.53-22.3 23.19-22.3a24.9 24.9 0 019.21 1.86l-1.6 4.75a19.27 19.27 0 00-7.48-1.65c-11.73 0-17.42 8.63-17.42 17.71 0 8.46 5.64 12.5 13.17 12.5m40.9-29.55H310.2L307.71 398H322l-.94 4.87h-14.45l-2.83 12.72H320l-1.06 4.87h-21.8l8.47-38.62h21zm-53.92-93.49c-2.37 0-7.66 1.48-13 3.53-8.24 2.95-15.9 7.07-15.9 19.73 0 7.66 5.3 17.08 16.5 17.08 10.6 0 13.83-7.07 14.12-14.13l.59-21.2c0-3.24-.88-5-2.35-5m58 43.58c-5.89 8.24-20.31 12.95-29.44 12.95-7.36 0-15.61-2.05-21.2-8.24-2.06-2.06-3.24-3.53-4.71-3.53s-3.54 1.47-7.95 4.12c-5.6 3.53-14.43 7.65-25 7.65-20 0-30-13.83-30-28.56 0-10.6 4.12-20.31 24.44-27.38 10.31-3.53 21.49-7.65 32.38-11.78 5.89-2.06 6.78-4.71 6.78-7.65l.29-7.66c.59-15-3.53-28-18-28-8.25 0-14.43 4.42-15.61 13-.58 5.59-2.35 8.54-5.6 10.59-4.11 2.66-12.36 5.31-18.83 5.31-3.83 0-5.6-2.06-5.6-4.71 0-3.53 1.77-9.72 11.49-18.85 9.12-8.54 30.32-18.54 45.34-18.54 23.26 0 37.68 10.89 36.51 36.79l-2.06 45.94c-.89 17.08 3.53 25.91 14.13 25.91 5 0 9.13-3.24 10-3.24 1.47 0 3.53 3.24 2.65 5.89m80.38-111.29a74.7 74.7 0 0125.32 4.12c3.83 3.53 5.89 8.24 5.89 15 0 9.42-5 13.84-7.37 13.84-2 0-3.53-.59-5.58-3.24-6.49-8.54-15.32-18-26.8-18-16.78 0-34.16 16.49-34.16 44.16 0 23.86 15.32 46.52 42.11 46.52 19.14 0 25.91-7.06 31.8-15.6a5.79 5.79 0 016.18 5.3c-10.6 23.85-33.27 32.09-51.82 32.09-15.61 0-30.91-6.18-40.93-15.9-10.3-10-17.07-25.32-17.07-42.39 0-34.45 25-65.95 72.43-65.95m-53.73 195h-5.52l6.91-32.26-6.83 4.73-2.55-4.1 11.4-7h4.92zM373.48 407h12.12l5.09-20.75h-.11zm22.42 0l-.89 4.53h-5.1l-1.93 8.8h-5.42l1.93-8.8h-18l1-4.53 21-25.3h8l-5.58 25.3zm11.18 13.33h-6.36l21.69-34.08h-18.59l1-4.55h24.46l-1.1 4.93zm39.24-34.75c-5.41 0-8.52 5.42-8.52 9.91a5.59 5.59 0 005.87 6c5 0 8.19-4.92 8.19-9.91 0-3.26-1.77-6-5.54-6M436.7 421a21.63 21.63 0 01-8-1.5l1.71-4.42a12.75 12.75 0 005.87 1.39c8.24 0 12.44-6.26 14.66-14.23l-.11-.11a11.32 11.32 0 01-8.74 3.87c-5.81 0-9.8-4-9.8-9.79 0-8.35 4.76-15.16 13.89-15.16 7.41 0 11.23 4.37 11.23 11.95 0 10.08-4.48 28-20.69 28' transform='translate(-10.3 -4.18)'/%3E%3C/svg%3E");
 }
 
-.box-red1 .slick-dots li button, .box-red2 .slick-dots li button, .box-red3 .slick-dots li button, .box-blue1 .slick-dots li button, .box-blue2 .slick-dots li button, .box-teal1 .slick-dots li button, .box-teal2 .slick-dots li button, .box-green1 .slick-dots li button, .box-green2 .slick-dots li button, .box-grey1 .slick-dots li button, .box-grey2 .slick-dots li button {
+:is(.box-red1, .box-red2, .box-red3 .box-blue1, .box-blue2, .box-teal1, .box-teal2, .box-green1, .box-green2, .box-grey1, .box-grey2) .slick-dots li button {
   background: rgba(255, 255, 255, .6);
 }
 
-.box-red1 .slick-dots .slick-active button, .box-red2 .slick-dots .slick-active button, .box-red3 .slick-dots .slick-active button, .box-blue1 .slick-dots .slick-active button, .box-blue2 .slick-dots .slick-active button, .box-teal1 .slick-dots .slick-active button, .box-teal2 .slick-dots .slick-active button, .box-green1 .slick-dots .slick-active button, .box-green2 .slick-dots .slick-active button, .box-grey1 .slick-dots .slick-active button, .box-grey2 .slick-dots .slick-active button {
+:is(.box-red1, .box-red2, .box-red3 .box-blue1, .box-blue2, .box-teal1, .box-teal2, .box-green1, .box-green2, .box-grey1, .box-grey2) .slick-dots .slick-active button {
   background: #fff;
 }
 
 /* White icon */
-.box-red1 .with-arrow::after, .box-red2 .with-arrow::after, .box-red3 .with-arrow::after, .box-blue1 .with-arrow::after, .box-blue2 .with-arrow::after, .box-teal1 .with-arrow::after, .box-teal2 .with-arrow::after, .box-green1 .with-arrow::after, .box-green2 .with-arrow::after, .box-grey1 .with-arrow::after, .box-grey2 .with-arrow::after {
+:is(.box-red1, .box-red2, .box-red3 .box-blue1, .box-blue2, .box-teal1, .box-teal2, .box-green1, .box-green2, .box-grey1, .box-grey2) .with-arrow::after {
   -webkit-filter: brightness(0) invert(1);
   filter: brightness(0) invert(1);
 }
