--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -32,6 +32,10 @@ style may vary. Currently, the standard CSS files that are in actual use are:
   text-transform: none;
 }
 
+:root {
+  --scroll-bar: 10px;
+}
+
 html {
   overflow: -moz-scrollbars-vertical;
   -ms-text-size-adjust: 100%;
@@ -8252,7 +8256,6 @@ ul.sf-menu li a:hover {
 }
 
 /* Custom cookie popup styles */
-
 .ccc {
   font-size: 13px;
   font-style: normal;
@@ -8308,7 +8311,7 @@ ul.sf-menu li a:hover {
 @media all and (min-width: 768px) {
   .ccc-popup {
     width: 746px;
-    padding: 23px 100px 52px 100px;
+    padding: 23px 130px 52px 130px;
   }
 }
 
@@ -8325,22 +8328,55 @@ ul.sf-menu li a:hover {
 }
 
 #ccc-title {
-  margin-top: 13px;
-  margin-bottom: 10px;
-  font-size: 26px;
+  margin: 13px 0;
+  font-size: 21px;
   line-height: 1.3;
   font-weight: 600;
 }
 
+@media (min-width: 991px) {
+  #ccc-title {
+    font-size: 24px;
+  }
+}
+
 #ccc-desc {
-  font-size: 16px;
+  font-size: 14px;
   text-align: left;
+}
+
+@media (max-width: 480px) {
+  #ccc-desc {
+    position: relative;
+    margin-bottom: 15px
+  }
+
+  #ccc-desc::after {
+    content: '';
+    background: linear-gradient(to top, #575757, rgba(80, 80, 80, 0));
+    height: 35px;
+    position: absolute;
+    width: calc(100% - var(--scroll-bar, 10px));
+    bottom: 0;
+    pointer-events: none
+  }
+
+  .ccc-intro-inner {
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+    max-height: 265px;
+    padding: 0 10px 45px 0
+  }
+
+  .ccc-intro-inner>p:first-child {
+    margin-top: 0
+  }
 }
 
 @media all and (min-width: 768px) {
   #ccc-desc {
     margin-bottom: 30px;
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: .7px;
   }
 }
@@ -8363,9 +8399,13 @@ ul.sf-menu li a:hover {
 }
 
 .ccc-select-title {
-  display: block;
+  -ms-flex: 1;
+  flex: 1;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  font-size: 17px;
   margin-top: 0;
-  font-size: 18px;
+  display: inline-block;
 }
 
 @media all and (min-width: 768px) {
@@ -8424,16 +8464,17 @@ ul.sf-menu li a:hover {
 }
 
 .ccc-select-description {
-  font-size: 16px;
-  color: #fff;
-  text-align: left;
-  letter-spacing: .7px;
+  -ms-flex-item-align: end;
+  align-self: flex-end;
+  float: right;
+  margin: 5px 15px 0 0
 }
 
 @media (max-width: 767px) {
   .ccc-select-description {
     margin-bottom: 13px;
-    display: block;
+    font-size: 12px;
+    margin: 0 10px 2px 0
   }
 }
 
@@ -8563,12 +8604,6 @@ ul.sf-menu li a:hover {
   height: 0;
 }
 
-@media (min-width: 768px) {
-  .ccc-buttons {
-    margin-top: 45px;
-  }
-}
-
 .ccc-buttons button {
   padding: 10px;
   font-size: 14px;
@@ -8581,6 +8616,10 @@ ul.sf-menu li a:hover {
 }
 
 @media (min-width: 768px) {
+  .ccc-buttons {
+    margin-top: 45px;
+  }
+
   .ccc-buttons button {
     padding: 10px 25px;
     font-size: 18px;
