--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -132,7 +132,7 @@ blockquote.full-width::before {
   }
 
   .well, [itemprop="video"] {
-    margin: 0 calc(-25% - 7px) 0 calc(-25% - 7px);
+    margin: 0 calc(-25% - 7px) 20px calc(-25% - 7px);
   }
 
   .figure-caption, figcaption {
