--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -23,6 +23,7 @@
 
     &:focus {
       .tab-focus-v2();
+      outline-offset: 2px;
     }
   }
 }
@@ -301,6 +302,7 @@
 
     &:focus {
       .tab-focus-v2();
+      outline-offset: -4px;
     }
 
     &:first-child {
