--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -69,6 +69,7 @@
 @import "ku-tiles.less";
 @import "ku-entries.less";
 @import "ku-slickslider.less";
+@import "ku-swiperjs.less";
 @import "ku-datetimepicker.less";
 @import "ku-privacypolicy.less";
 @import "ku-social-boxtop.less";
