--- a/docs/_includes/css/buttons.html
+++ b/docs/_includes/css/buttons.html
@@ -49,6 +49,7 @@
     <button type="button" class="btn btn-social linkedin" onclick="shareURL('linkedin')">Share on</button>
     <button type="button" class="btn btn-social twitter" onclick="shareURL('twitter')">Share on</button>
     <button type="button" class="btn btn-social instagram" onclick="location.href='https://www.instagram.com/university_of_copenhagen';">Follow us on Instagram</button>
+    <button type="button" class="btn btn-social youtube" onclick="location.href='https://www.youtube.com/';">Follow us on Youtube</button>
   </div>
 {% highlight html %}
 <!-- Standard button -->
@@ -83,6 +84,9 @@
 
 <!-- Instagram -->
 <button type="button" class="btn btn-social instagram" onclick="location.href='https://www.instagram.com/university_of_copenhagen';">Follow us on Instagram</button>
+
+<!-- Youtube -->
+<button type="button" class="btn btn-social youtube" onclick="location.href='https://www.youtube.com/';">Follow us on Youtube</button>
 {% endhighlight %}
   <div class="bs-callout bs-callout-warning" id="callout-buttons-color-accessibility">
     <h4>Conveying meaning to assistive technologies</h4>
