--- a/less/buttons.less
+++ b/less/buttons.less
@@ -176,8 +176,8 @@
 
     &::after {
       content: @icon-youtube;
-      font-size: 28px;
-      top: 0px;
+      font-size: 30px;
+      top: 0;
       margin-left: 5px;
     }
   }
