--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -3,6 +3,10 @@
   line-height: 1.6;
 }
 
+.breadcrumbs {
+  margin-bottom: 2px;
+}
+
 .nyhedsdato {
   margin-top: 23px;
 }
@@ -11,12 +15,16 @@
   font-weight: 600;
 }
 
+.manchet span {
+  color: #252525;
+}
+
 .widenews-contactbox {
   min-height: 20px;
   padding: 15px;
-  background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
   border-radius: 2px;
+  margin-bottom: 55px;
 }
 
 .widenews-contactbox h2:first-child {
@@ -48,10 +56,12 @@ blockquote.full-width::before {
 
   h2 {
     font-size: 24px;
+    margin-top: 35px;
   }
 
   h3 {
     font-size: 20px;
+    margin-top: 35px;
   }
 
   .manchet {
@@ -74,7 +84,7 @@ blockquote.full-width::before {
 
   blockquote::before {
     top: auto;
-    bottom: -27px;
+    bottom: -18px;
     font-size: 80px;
   }
 
@@ -132,7 +142,7 @@ blockquote.full-width::before {
   }
 
   .well, [itemprop="video"] {
-    margin: 10px calc(-25% - 7px) 23px calc(-25% - 7px);
+    margin: 30px calc(-25% - 7px) 30px calc(-25% - 7px);
   }
 
   .figure-caption, figcaption {
