--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -22,7 +22,7 @@
 .widenews-contactbox {
   min-height: 20px;
   padding: 15px;
-  border: 1px solid #e3e3e3;
+  background-color: #f5f5f5;
   border-radius: 2px;
   margin-bottom: 55px;
 }
@@ -132,7 +132,7 @@ blockquote.full-width::before {
   }
 
   .widenews-content .img-default {
-    margin: 10px calc(-25% - 7px) 23px calc(-25% - 7px);
+    margin: 23px calc(-25% - 7px) 23px calc(-25% - 7px);
     max-width: 757px;
     float: none !important;
   }
@@ -141,7 +141,7 @@ blockquote.full-width::before {
     overflow: hidden;
   }
 
-  .well, [itemprop="video"] {
+  [itemprop="video"] {
     margin: 30px calc(-25% - 7px) 30px calc(-25% - 7px);
   }
 
