--- a/docs/assets/css/doctypes/brednyhed.css
+++ b/docs/assets/css/doctypes/brednyhed.css
@@ -24,7 +24,7 @@
   padding: 15px;
   background-color: #f5f5f5;
   border-radius: 2px;
-  margin-bottom: 55px;
+  margin: 30px 0 55px 0;
 }
 
 .widenews-contactbox h2:first-child {
