--- a/less/variables.less
+++ b/less/variables.less
@@ -1008,7 +1008,7 @@
 //** Headings small color
 @headings-small-color:        @gray-light;
 //** Blockquote icon color
-@blockquote-icon-color:       #818181;
+@blockquote-icon-color:       inherit;
 //** Blockquote small color
 @blockquote-small-color:      @gray-light;
 //** Blockquote font size
