--- a/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
+++ b/docs/assets/css/ku-dk-frontpage/ku-dk-frontpage.css
@@ -312,18 +312,17 @@ video {
   top: 56px;
   left: -51px;
   font-size: 64px;
-  color: inherit;
   display: inline-block;
 }
 
 .ku-quote {
-  color: #fff !important;
+  color: inherit !important;
   text-decoration: none
 }
 
 .ku-quote:focus, .ku-quote:active, .ku-quote:hover {
-  color: #fff !important;
-  text-decoration: underline
+  color: inherit !important;
+  text-decoration: underline;
 }
 
 .find-a-researcher {
