--- a/less/ku-footer.less
+++ b/less/ku-footer.less
@@ -280,8 +280,10 @@
             }
           }
 
-          &:focus, &:active {
+          &:active,
+          &:focus {
             .tab-focus-v2();
+            outline-offset: -3px;
           }
         }
 
