New partially collapsible box

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -127,7 +127,7 @@
   }
 
   &.facebook {
-    .social-button-variant(@white-color; @ku-facebook; #364e92);
+    .simple-button-variant(@white-color; @ku-facebook; #364e92);
 
     &::after {
       content: @icon-facebook;
@@ -138,7 +138,7 @@
   }
 
   &.linkedin {
-    .social-button-variant(@white-color; @ku-linkedin; #084461);
+    .simple-button-variant(@white-color; @ku-linkedin; #084461);
 
     &::after {
       content: @icon-linkedin;
@@ -149,7 +149,7 @@
   }
 
   &.twitter {
-    .social-button-variant(@white-color; @ku-twitter; #0075a2);
+    .simple-button-variant(@white-color; @ku-twitter; #0075a2);
 
     &::after {
       content: @icon-twitter;
@@ -160,7 +160,7 @@
   }
 
   &.instagram {
-    .social-button-variant(@white-color; #c13584; darken(#c13584, 5%));
+    .simple-button-variant(@white-color; #c13584; darken(#c13584, 5%));
     background: linear-gradient(45deg , #c13584, #e1306c, #fd1d1d);
 
     &::after {
@@ -172,7 +172,7 @@
   }
 
   &.youtube {
-    .social-button-variant(@white-color; #f00; darken(#f00, 5%));
+    .simple-button-variant(@white-color; #f00; darken(#f00, 5%));
 
     &::after {
       content: @icon-youtube;
