--- a/less/mixins/buttons.less
+++ b/less/mixins/buttons.less
@@ -68,7 +68,7 @@
 // KU specific:
 // Mixin without drowdowns, disables states, etc.
 
-.social-button-variant(@color; @background; @border) {
+.simple-button-variant(@color; @background; @border) {
   color: @color;
   background-color: @background;
   border-color: @border;
