--- a/less/variables.less
+++ b/less/variables.less
@@ -103,6 +103,10 @@
 // Org chart:
 @ku-org-chart-line:     2px;
 
+// Partial collapse bos
+@exp-box-height:        100px;
+@exp-btn-color:         #c73028;
+
 // KU gradients
 @ku-entry-start:        #f3f3f1;
 @ku-entry-end:          #edece9;
