--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -77,6 +77,7 @@
 @import "ku-legacy.less";
 @import "ku-custom-elements.less";
 @import "ku-editor-overrides.less";
+@import "ku-partial-collapse-box.less";
 @import "ku-login.less";
 @import "ku-usabilla.less";
 @import "ku-searchresult-list";
