--- a/less/variables.less
+++ b/less/variables.less
@@ -106,6 +106,7 @@
 // Partial collapse bos
 @exp-box-height:        100px;
 @exp-btn-color:         #c73028;
+@exp-box-btn-offset:    16px;
 
 // KU gradients
 @ku-entry-start:        #f3f3f1;
