Exp box variables

--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -4,7 +4,7 @@
 
 .exp-box {
   background-color: @gray-f5;
-  border: 1px solid @well-border;
+  border: 1px solid @exp-box-border;
   border-radius: @border-radius-base;
   margin-bottom: @exp-box-btn-offset;
 
