--- a/less/variables.less
+++ b/less/variables.less
@@ -105,6 +105,7 @@
 
 // Partial collapse bos
 @exp-box-height:        100px;
+@exp-box-border:        #f1f1f1;
 @exp-btn-color:         #c73028;
 @exp-box-btn-offset:    16px;
 
