--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 
 .exp-box {
-  background-color: @gray-f5;
+  background-color: @exp-box-bg;
   border: 1px solid @exp-box-border;
   border-radius: @border-radius-base;
   margin-bottom: @exp-box-btn-offset;
@@ -21,7 +21,7 @@
 }
 
 .btn-expand {
-  .simple-button-variant(@white-color; @exp-btn-color; darken(@exp-btn-color, 5%));
+  .simple-button-variant(@white-color; @exp-box-btn-color; darken(@exp-box-btn-color, 5%));
   bottom: -@exp-box-btn-offset;
   position: relative;
 
@@ -64,7 +64,7 @@
   &[aria-expanded="false"] {
     &::after {
       content: '';
-      background: linear-gradient(to bottom, rgba(245, 245, 245, 0) 0%, rgba(245, 245, 245, .85) 100%);
+      background: linear-gradient(to bottom, rgba(@exp-box-bg, 0) 0%, rgba(@exp-box-bg, .85) 100%);
       height: 55%;
       width: 100%;
       position: absolute;
