--- a/less/variables.less
+++ b/less/variables.less
@@ -105,8 +105,9 @@
 
 // Partial collapse bos
 @exp-box-height:        100px;
+@exp-box-bg:           #f5f5f5;
 @exp-box-border:        #f1f1f1;
-@exp-btn-color:         #c73028;
+@exp-box-btn-color:         #c73028;
 @exp-box-btn-offset:    16px;
 
 // KU gradients
