--- a/docs/_includes/components/ku-factbox.html
+++ b/docs/_includes/components/ku-factbox.html
@@ -22,7 +22,7 @@
     <div class="col-sm-12 col-md-4">
       <div class="quote-box">
         <blockquote>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas nulla eu scelerisque placerat.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
           <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
         </blockquote>
       </div>
