--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -177,6 +177,15 @@
   }
 }
 
+[tabindex] {
+  .slide-link {
+    &:focus {
+      outline: 0;
+      user-focus: none;
+    }
+  }
+}
+
 .slick-arrow.slick-hidden {
   display: none;
 }
