--- a/docs/assets/css/print/print.css
+++ b/docs/assets/css/print/print.css
@@ -30,7 +30,7 @@ header, nav, footer {
   overflow: visible !important;
 }
 
-main {
+#content {
   margin-left: 0;
   overflow-y: visible;
 }
@@ -52,7 +52,7 @@ main {
   position: relative;
 }
 
-main, .main-area, .ku-branding {
+#content, .main-area, .ku-branding {
   width: 100%;
 }
 
