Changing main to content id

--- a/less/ku-privacypolicy.less
+++ b/less/ku-privacypolicy.less
@@ -36,6 +36,7 @@
 .ccc-popup {
   height: 100%;
   padding-bottom: @grid-gutter-height;
+  background-color: transparent;
   @media (min-width: @screen-sm-max) {
     padding: @grid-gutter-height 130px floor((@grid-gutter-width * 2)) 130px;
   }
