--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
     <a id="skippy" class="sr-only sr-only-focusable" href="#content"><div class="container"><span class="skiplink-text">Skip to main content</span></div></a>
     {% include nav/main.html %}
     <main id="content">
-    <div class="bs-docs-header" id="content" tabindex="-1">
+    <div class="bs-docs-header" tabindex="-1">
       <div class="container">
         <h1>{{ page.title }}</h1>
         <p>{{ page.lead }}</p>
