--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -108,8 +108,8 @@
 }
 
 .mce-container-body {
-  [aria-label~="accordion"] {
-    // Show accordion icon in the editor - because it's hidden from old templates
+  [aria-label~="accordion"], [aria-label~="semi-collapsible"], [aria-label~="fold ud-boks"]  {
+    // Show accordion, etc. icon in the editor - because it's hidden from old templates
     display: inline-block;
   }
 }
