--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -6,6 +6,7 @@
 .mce-content-body {
   &#content {
     display: block;
+    flex: none;
     text-align: left;
     margin: 0;
     padding: 5px;
@@ -15,6 +16,22 @@
 
     img {
       .img-responsive;
+    }
+    // Semi collapsible box:
+    .exp-box {
+      .collapse {
+        &[aria-expanded=false] {
+          height: auto!important;
+        }
+      }
+    }
+
+    .exp-box-wrap {
+      &[aria-expanded=false] {
+        &::after {
+          background: 0;
+        }
+      }
     }
   }
 
@@ -29,12 +46,12 @@
   table {
     border: 1px dotted @table-border-color;
 
-    > tfoot,
+    > tbody,
      > thead,
-    > tbody {
+    > tfoot {
       > tr {
-        > th,
-        > td {
+        > td,
+        > th {
           border: 1px dotted @table-border-color;
         }
       }
@@ -108,7 +125,9 @@
 }
 
 .mce-container-body {
-  [aria-label~="accordion"], [aria-label~="semi-collapsible"], [aria-label~="fold ud-boks"]  {
+  [aria-label~="accordion"],
+  [aria-label~="semi-collapsible"],
+  [aria-label~="fold ud-boks"] {
     // Show accordion, etc. icon in the editor - because it's hidden from old templates
     display: inline-block;
   }
