--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -18,6 +18,10 @@
       .img-responsive;
     }
     // Semi collapsible box:
+    .editor-collapsible {
+      padding: 15px;
+    }
+
     .exp-box {
       .collapse {
         &[aria-expanded=false] {
