--- a/less/ku-custom-elements.less
+++ b/less/ku-custom-elements.less
@@ -526,6 +526,10 @@ form.gdpr-accept {
   ul {
     li {
       padding: 10px 0;
+
+      &:first-child {
+        padding-top: 0;
+      }
     }
   }
 }
