Semi collapsible box

--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -5594,7 +5594,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    height: auto;
  }
 
- .accordion-hidden {
+ .accordion-hidden, .collapsible-hidden {
    display: none;
  }
 
