--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -125,6 +125,10 @@
   }
 }
 
+.collapsible-hidden {
+  display: none;
+}
+
 .mce-container-body {
   [aria-label~="accordion"],
   [aria-label~="semi-collapsible"],
