Semi collapsible box

--- a/less/ku-editor-overrides.less
+++ b/less/ku-editor-overrides.less
@@ -46,12 +46,12 @@
   table {
     border: 1px dotted @table-border-color;
 
-    > tfoot,
+    > tbody,
      > thead,
-    > tbody {
+    > tfoot {
       > tr {
-        > th,
-        > td {
+        > td,
+        > th {
           border: 1px dotted @table-border-color;
         }
       }
@@ -138,9 +138,12 @@
 }
 
 .mce-content-body {
-  & + .collapsible-hidden {
-    display: block;
-    margin: 5px 0;
+  // Semi collapsible box
+  .exp-box {
+    & + .collapsible-hidden {
+      display: block;
+      margin: 5px 0;
+    }
   }
 
   .panel-accordion {
