--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -6,7 +6,7 @@
   background-color: @exp-box-bg;
   border: 1px solid @exp-box-border;
   border-radius: @border-radius-base;
-  margin-bottom: @exp-box-btn-offset;
+  margin-bottom: (@exp-box-btn-offset + 7px);
 
   .collapse[aria-expanded="false"] {
     display: block;
