Changing paths to local folder

--- a/less/variables.less
+++ b/less/variables.less
@@ -196,7 +196,7 @@
 //** Element ID within SVG icon file.
 @icon-font-svg-id:        "glyphicons_halflingsregular";
 //** Custom KU icon font.
-@custom-icon-font-path:   "https://cms.ku.dk/styling/fonts/";
+@custom-icon-font-path:   "../fonts/"; //"https://cms.ku.dk/styling/fonts/";
 @custom-icon-font-family-name: "ku-symbols";
 @custom-icon-font-name:   "KU";
 //** Element ID within SVG icon file for KU custom font.
