--- a/less/variables.less
+++ b/less/variables.less
@@ -190,7 +190,7 @@
 //## Specify custom location and filename of the included Glyphicons icon font. Useful for those including Bootstrap via Bower.
 
 //** Load fonts from this directory.
-@icon-font-path:           "https://cms.ku.dk/styling/fonts/";//"../fonts/";
+@icon-font-path:           "../fonts/"; //"https://cms.ku.dk/styling/fonts/";
 //** File name for all font files.
 @icon-font-name:          "glyphicons-halflings-regular";
 //** Element ID within SVG icon file.
@@ -204,7 +204,7 @@
 
 
 //** KU web font.
-@web-font-path:   "https://cms.ku.dk/styling/fonts/";
+@web-font-path:   "../fonts/"; //"https://cms.ku.dk/styling/fonts/";
 @web-font-family-name: "Open Sans";
 @web-font-name:   "open-sans-v18-latin-ext_latin-";
 //** Element ID within SVG icon file for KU custom font.
