--- a/docs/_includes/components/thumbnails.html
+++ b/docs/_includes/components/thumbnails.html
@@ -47,7 +47,7 @@
   <p>With HTML5's figure tag, you can easily control content and captions.</p>
   <div class="bs-example" data-example-id="img-with-captions">
     <figure class="image">
-      <img src="https://placehold.it/400x200" class="figure-img" alt="A generic square placeholder image in a figure.">
+      <img src="/bootstrap/images/placeholder_550x300.jpg" class="figure-img" alt="A generic square placeholder image in a figure.">
       <figcaption class="figure-caption">A caption for the above image.</figcaption>
     </figure>
   </div>
