--- a/docs/_includes/global-footer.html
+++ b/docs/_includes/global-footer.html
@@ -122,7 +122,7 @@
 <script async defer src="{{ site.baseurl }}/assets/js/docs.min.js"></script>
 <!-- //Documentation extra - not for production -->
 {% endif %}
-<script async defer src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>
+<!--<script async defer src="{{ site.baseurl }}/assets/js/ku-global-search/search.js"></script>-->
 <script>
   // Only use under development - set active left menu item
   $(function() {
