--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -46,7 +46,9 @@
   .exp-box-wrap[aria-expanded="true"] & {
     padding-bottom: 0;
   }
+}
 
+.bootstrap-collapsible-content {
   & > * {
     &:first-child {
       margin-top: 0;
