--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -48,6 +48,10 @@
   }
 }
 
+.bootstrap-collapsible-title {
+  margin-top: 0;
+}
+
 .bootstrap-collapsible-content {
   & > * {
     &:first-child {
