--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -1664,11 +1664,12 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    clear: both;
  }
 
-.obadm .admincontentwrapper #content {
-  display: block;
-  -ms-flex: none;
-  flex: none;
-}
+ .obadm .admincontentwrapper #content {
+   display: block;
+   -ms-flex: none;
+   flex: none;
+ }
+
  .obadm .admincontentwrapper #content-wrapper h1.title {
    background: none;
    border: 0;
@@ -4325,7 +4326,20 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    position: absolute;
    right: 27px;
    margin: 0.5em;
-   background-position: -63px -79px;
+   background-size: cover;
+   background-position: center center;
+   background-repeat: no-repeat;
+   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 122.36 122.88' style='enable-background:new 0 0 122.36 122.88' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M5.85,0h20.09c3.22,0,5.85,2.63,5.85,5.85v20.09c0,3.22-2.63,5.85-5.85,5.85H5.85C2.63,31.8,0,29.16,0,25.94 V5.85C0,2.63,2.63,0,5.85,0L5.85,0z M96.42,91.08h20.09c3.22,0,5.86,2.63,5.86,5.86v20.09c0,3.22-2.63,5.86-5.86,5.86H96.42 c-3.22,0-5.86-2.63-5.86-5.86V96.94C90.56,93.72,93.2,91.08,96.42,91.08L96.42,91.08z M51.14,91.08h20.09 c3.22,0,5.86,2.63,5.86,5.86v20.09c0,3.22-2.63,5.86-5.86,5.86H51.14c-3.22,0-5.85-2.63-5.85-5.86V96.94 C45.28,93.72,47.92,91.08,51.14,91.08L51.14,91.08z M5.85,91.08h20.09c3.22,0,5.85,2.63,5.85,5.86v20.09 c0,3.22-2.63,5.86-5.85,5.86H5.85c-3.22,0-5.85-2.63-5.85-5.86V96.94C0,93.72,2.63,91.08,5.85,91.08L5.85,91.08z M96.42,45.54 h20.09c3.22,0,5.86,2.63,5.86,5.86v20.09c0,3.22-2.63,5.86-5.86,5.86H96.42c-3.22,0-5.86-2.63-5.86-5.86V51.4 C90.56,48.18,93.2,45.54,96.42,45.54L96.42,45.54z M51.14,45.54h20.09c3.22,0,5.86,2.63,5.86,5.86v20.09 c0,3.22-2.63,5.86-5.86,5.86H51.14c-3.22,0-5.85-2.63-5.85-5.86V51.4C45.28,48.18,47.92,45.54,51.14,45.54L51.14,45.54z M5.85,45.54h20.09c3.22,0,5.85,2.63,5.85,5.86v20.09c0,3.22-2.63,5.86-5.85,5.86H5.85C2.63,77.34,0,74.7,0,71.48V51.4 C0,48.18,2.63,45.54,5.85,45.54L5.85,45.54z M96.42,0h20.09c3.22,0,5.86,2.63,5.86,5.85v20.09c0,3.22-2.63,5.85-5.86,5.85H96.42 c-3.22,0-5.86-2.63-5.86-5.85V5.85C90.56,2.63,93.2,0,96.42,0L96.42,0z M51.14,0h20.09c3.22,0,5.86,2.63,5.86,5.85v20.09 c0,3.22-2.63,5.85-5.86,5.85H51.14c-3.22,0-5.85-2.63-5.85-5.85V5.85C45.28,2.63,47.92,0,51.14,0L51.14,0z'/%3E%3C/g%3E%3C/svg%3E%0A");
+ }
+
+ table.gcedit tbody th input.slide-disabled {
+   position: absolute;
+   right: 27px;
+   margin: 0.5em;
+   background-size: cover;
+   background-position: calc(100% - -1px) calc(100% - 1px);
+   background-repeat: no-repeat;
+   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 122.879 101.018' enable-background='new 0 0 122.879 101.018' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M4.923,28.587h87.663c1.357,0,2.588,0.553,3.479,1.444c0.891,0.891,1.445,2.123,1.445,3.479v62.584 c0,1.356-0.553,2.589-1.445,3.479c-0.078,0.079-0.16,0.152-0.246,0.221c-0.867,0.761-1.998,1.223-3.232,1.223H4.923 c-1.356,0-2.588-0.553-3.479-1.443C0.553,98.684,0,97.451,0,96.095V33.51c0-1.357,0.553-2.588,1.444-3.479 C2.334,29.14,3.566,28.587,4.923,28.587L4.923,28.587z M32.734,5.852c-1.616,0-2.926-1.31-2.926-2.926 c0-1.615,1.31-2.926,2.926-2.926h87.221c1.615,0,2.924,1.311,2.924,2.926v61.476c0,1.616-1.309,2.926-2.924,2.926 c-1.617,0-2.926-1.31-2.926-2.926V5.852H32.734L32.734,5.852z M19.531,20.651c-1.616,0-2.925-1.31-2.925-2.926 s1.31-2.926,2.925-2.926h87.221c1.615,0,2.926,1.31,2.926,2.926v61.476c0,1.616-1.311,2.926-2.926,2.926s-2.926-1.31-2.926-2.926 v-58.55H19.531L19.531,20.651z M91.658,34.438H5.851v60.729h85.807V34.438L91.658,34.438z'/%3E%3C/g%3E%3C/svg%3E");
  }
 
  table.gcedit tbody td {
@@ -5049,7 +5063,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    margin-bottom: auto;
  }
 
- .thumbnail_image > b {
+ .thumbnail_image>b {
    word-break: break-all;
  }
 
@@ -6050,9 +6064,9 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  }
 
  .subsites2.results td a {
-    overflow-wrap: break-word;
-    word-wrap: break-word;
-}
+   overflow-wrap: break-word;
+   word-wrap: break-word;
+ }
 
  .obvius-admin-notice {
    position: fixed;
