--- a/docs/assets/css/obvius-admin/admin.css
+++ b/docs/assets/css/obvius-admin/admin.css
@@ -4337,9 +4337,9 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
    right: 27px;
    margin: 0.5em;
    background-size: cover;
-   background-position: calc(100% - -1px) calc(100% - 1px);
+   background-position: center center;
    background-repeat: no-repeat;
-   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 122.879 101.018' enable-background='new 0 0 122.879 101.018' xml:space='preserve'%3E%3Cg%3E%3Cpath d='M4.923,28.587h87.663c1.357,0,2.588,0.553,3.479,1.444c0.891,0.891,1.445,2.123,1.445,3.479v62.584 c0,1.356-0.553,2.589-1.445,3.479c-0.078,0.079-0.16,0.152-0.246,0.221c-0.867,0.761-1.998,1.223-3.232,1.223H4.923 c-1.356,0-2.588-0.553-3.479-1.443C0.553,98.684,0,97.451,0,96.095V33.51c0-1.357,0.553-2.588,1.444-3.479 C2.334,29.14,3.566,28.587,4.923,28.587L4.923,28.587z M32.734,5.852c-1.616,0-2.926-1.31-2.926-2.926 c0-1.615,1.31-2.926,2.926-2.926h87.221c1.615,0,2.924,1.311,2.924,2.926v61.476c0,1.616-1.309,2.926-2.924,2.926 c-1.617,0-2.926-1.31-2.926-2.926V5.852H32.734L32.734,5.852z M19.531,20.651c-1.616,0-2.925-1.31-2.925-2.926 s1.31-2.926,2.925-2.926h87.221c1.615,0,2.926,1.31,2.926,2.926v61.476c0,1.616-1.311,2.926-2.926,2.926s-2.926-1.31-2.926-2.926 v-58.55H19.531L19.531,20.651z M91.658,34.438H5.851v60.729h85.807V34.438L91.658,34.438z'/%3E%3C/g%3E%3C/svg%3E");
+   background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg version='1.1' id='Layer_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 121.78 122.88' style='enable-background:new 0 0 121.78 122.88' xml:space='preserve'%3E%3Cg%3E%3Cpath fill-rule='evenodd' d='M30.06,0h61.65c3.43,0,6.23,2.81,6.23,6.23v6.47H23.83V6.23C23.83,2.8,26.63,0,30.06,0L30.06,0z M11.23,38.38 h99.32c6.18,0,11.23,5.05,11.23,11.23v62.04c0,6.18-5.05,11.23-11.23,11.23H11.23C5.05,122.88,0,117.83,0,111.65V49.61 C0,43.43,5.05,38.38,11.23,38.38L11.23,38.38z M54.11,58.38L81.4,77.41c0.45,0.29,0.86,0.67,1.18,1.13 c1.28,1.85,0.81,4.39-1.04,5.67L54.37,103c-0.7,0.58-1.6,0.92-2.59,0.92c-2.26,0-4.09-1.83-4.09-4.09V61.72h0.02 c0-0.81,0.24-1.62,0.73-2.33C49.73,57.54,52.27,57.09,54.11,58.38L54.11,58.38z M18.14,18.81h85.49c3.43,0,6.23,2.81,6.23,6.23 v6.72H11.91v-6.72C11.91,21.61,14.71,18.81,18.14,18.81L18.14,18.81z'/%3E%3C/g%3E%3C/svg%3E%0A");
  }
 
  table.gcedit tbody td {
@@ -4600,7 +4600,7 @@ form.obvius-navigator div.obvius-subdocs table tr.obvius-a:hover,
  }
 
  input[type="button"]:hover {
-   background-color: #666;
+   background-color: #999;
    color: #fff;
  }
 
