--- a/docs/_includes/components/thumbnails.html
+++ b/docs/_includes/components/thumbnails.html
@@ -60,7 +60,7 @@
 
   <div class="bs-example" data-example-id="img-with-captions-aligned">
     <figure class="image pull-right">
-      <img src="https://placehold.it/200x150" class="figure-img" alt="Right-aligned figure">
+      <img src="/bootstrap/images/placeholder_550x300.jpg" class="figure-img" alt="Right-aligned figure">
       <figcaption class="figure-caption">Right-aligned figure</figcaption>
     </figure>
     <p>Add <code>pull-left</code> or <code>pull-right</code> to the figure element to align the image.</p>
