Added SwiperJS components

--- a/less/bootstrap.less
+++ b/less/bootstrap.less
@@ -69,7 +69,10 @@
 @import "ku-tiles.less";
 @import "ku-entries.less";
 @import "ku-slickslider.less";
-@import "ku-swiperjs.less";
+@import "ku-swiperjs.less"; // Core
+@import "swiperJs/a11y.less"; // Additional component
+@import "swiperJs/navigation.less"; // Additional component
+@import "swiperJs/pagination.less"; // Additional component
 @import "ku-datetimepicker.less";
 @import "ku-privacypolicy.less";
 @import "ku-social-boxtop.less";
