--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -18,6 +18,18 @@
   .collapsing[aria-expanded="false"] {
     height: @exp-box-height !important;
   }
+
+  &-left {
+    float: left;
+    margin-right: 20px;
+    margin-left: 0;
+  }
+
+  &-right {
+    float: right;
+    margin-left: 20px;
+    margin-right: 0;
+  }
 }
 
 .btn-expand {
