--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -20,12 +20,14 @@
   }
 
   &-left {
+    width: 45%;
     float: left;
     margin-right: 20px;
     margin-left: 0;
   }
 
   &-right {
+    width: 45%;
     float: right;
     margin-left: 20px;
     margin-right: 0;
