--- a/less/ku-partial-collapse-box.less
+++ b/less/ku-partial-collapse-box.less
@@ -7,6 +7,21 @@
   border: 1px solid @exp-box-border;
   border-radius: @border-radius-base;
   margin-bottom: (@exp-box-btn-offset + 7px);
+    @media (min-width: @screen-sm-min) {
+      &-left {
+        width: 45%;
+        float: left;
+        margin-right: 20px;
+        margin-left: 0;
+      }
+
+      &-right {
+        width: 45%;
+        float: right;
+        margin-left: 20px;
+        margin-right: 0;
+      }
+    }
 
   .collapse[aria-expanded="false"] {
     display: block;
@@ -19,18 +34,11 @@
     height: @exp-box-height !important;
   }
 
-  &-left {
-    width: 45%;
-    float: left;
-    margin-right: 20px;
-    margin-left: 0;
-  }
-
-  &-right {
-    width: 45%;
-    float: right;
-    margin-left: 20px;
-    margin-right: 0;
+  .gccolumn &,
+  .rightbox-normal & {
+    width: 100%!important;
+    margin: 0;
+    float: none;
   }
 }
 
