--- a/less/ku-gridboxes.less
+++ b/less/ku-gridboxes.less
@@ -16,7 +16,7 @@
   width: 100%;
   position: relative;
   font-size: @font-size-body-desktop;
-  line-height: @line-height-small;
+  line-height: @line-height-computed;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
@@ -33,7 +33,7 @@
       color: inherit;
       font-size: 14.4px;
       text-transform: uppercase;
-      padding: 8px 18px 8px 10px;
+      padding: 8px 18px 5px 10px;
       font-weight: 700;
       letter-spacing: 0.4px;
     }
