--- a/docs/_includes/css/type.html
+++ b/docs/_includes/css/type.html
@@ -456,7 +456,7 @@ You can use the mark tag to <mark>highlight</mark> text.
 
 <!-- Jump to anchors -->
 <h2 id="type-jump-to">Jump to #id</h2>
-<p>Jump to anywhere on a page. To go go another page and jump to an id, add the full url followed by the href value which is the id of your target: <code>https://yourpage.com#type</code></p>
+<p>Jump to anywhere on a page. To go go another page and jump to an id, add the full url followed by the href value which is the id of your target: <code>https://yourpage.com#type-jump-to</code></p>
 <div class="bs-example" data-example-id="jump-top">
   <a class="jump-to" title="Jump" href="#type-jump-to">Jump</a>
 </div>
