--- a/less/ku-slickslider.less
+++ b/less/ku-slickslider.less
@@ -363,7 +363,7 @@
     height: auto;
     letter-spacing: 0.7px;
     text-decoration: none;
-    line-height: @line-height-small;
+    line-height: 1.5;
     padding: 10px;
     @media (max-width: @screen-sm) {
       padding-right: 10%;
@@ -389,53 +389,6 @@
     p {
       margin: 0 0 6px;
     }
-    // &.faculty_color {
-    //   background: @ku-red;
-    //   color: @white-color;
-    //   @media (min-width: @screen-sm) {
-    //     background: fade(@ku-red, 93%);
-    //   }
-    //
-    //   &.full-bg {
-    //     background: @ku-red;
-    //   }
-    // }
-    //
-    // &.subcolor_5 {
-    //   background: @ku-gray;
-    //   color: @text-color;
-    //   @media (min-width: @screen-sm) {
-    //     background: fade(@ku-gray, 90%);
-    //   }
-    //
-    //   &.full-bg {
-    //     background: @ku-gray;
-    //   }
-    // }
-    //
-    // &.subcolor_6 {
-    //   background: @gray-f5;
-    //   color: @text-color;
-    //   @media (min-width: @screen-sm) {
-    //     background: fade(@white-color, 90%);
-    //   }
-    //
-    //   &.full-bg {
-    //     background: @gray-f5;
-    //   }
-    // }
-    //
-    // &.subcolor_7 {
-    //   background: @brown;
-    //   color: @white-color;
-    //   @media (min-width: @screen-sm) {
-    //     background: fade(@brown, 83%);
-    //   }
-    //
-    //   &.full-bg {
-    //     background: @brown;
-    //   }
-    // }
     &.box {
       &-red1 {
         .slider-overlay-colors(@gridbox-text-light; @red1; 83%);
