Hide buton in editor for old templates

--- a/docs/legacy/css/style.css
+++ b/docs/legacy/css/style.css
@@ -4398,6 +4398,11 @@ body#content.mce-content-body {
   display: block !important;
 }
 
+#content.mce-container-body [aria-label~="accordion"], #content.mce-container-body [aria-label~="semi-collapsible"], #content.mce-container-body [aria-label~="fold ud-boks"] {
+  /* Hide accordion, etc. buttons in editor */
+  display: none
+}
+
 /* Tables are always outlined in editor */
 #content.mce-content-body .table, #content.mce-content-body .table tr, #content.mce-content-body .table tr>th, #content.mce-content-body .table tr>td {
   border: 1px dotted #ddd;
